fix: standardize CSS formatting and improve readability

--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -2,8 +2,9 @@ input,
 textarea,
 select {
   -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  
   width: 100%;
   border-radius: 0.5rem;
   border: 1px solid var(--stroke-default);
@@ -20,19 +21,19 @@ label {
 input:focus,
 select:focus,
 textarea:focus,
-input[type=date]:focus-within {
+input[type="date"]:focus-within {
   outline: 0.25rem solid var(--surface-secondary);
   border: 1px solid var(--stroke-highlight);
   outline-offset: 0.1px; /* fix for outline not showing on some browsers */
 }
 
-input[type=date] {
+input[type="date"] {
   position: relative;
 }
-input[type=date]::-webkit-calendar-picker-indicator {
+input[type="date"]::-webkit-calendar-picker-indicator {
   opacity: 0;
 }
-input[type=date]::before {
+input[type="date"]::before {
   content: "";
   position: absolute;
   background: url(../../assets/icons/calendar-03.svg) center/contain;
@@ -83,4 +84,4 @@ input[required] + .error .error-message {
 }
 input:not(:focus):valid + .error {
   display: none;
-}/*# sourceMappingURL=input.css.map */
+} /*# sourceMappingURL=input.css.map */
